--- a/app/views/mcore/users/_user.html.erb
+++ b/app/views/mcore/users/_user.html.erb
@@ -15,6 +15,11 @@
   </p>
 
   <p>
+    <strong>Full name:</strong>
+    <%= user.full_name %>
+  </p>
+
+  <p>
     <strong>Email:</strong>
     <%= user.email %>
   </p>
@@ -22,6 +27,11 @@
   <p>
     <strong>Address:</strong>
     <%= user.address %>
+  </p>
+
+  <p>
+    <strong>created_at:</strong>
+    <%= user.created_at %>
   </p>
 
 </div>
