--- a/app/views/mcore/users/show.html.erb
+++ b/app/views/mcore/users/show.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @user %>
+<%= render user %>
 
 <div>
   <%= link_to "User's posts", user_posts_path(@user) %> |
