--- a/app/views/layouts/mcore/application.html.erb
+++ b/app/views/layouts/mcore/application.html.erb
@@ -8,6 +8,8 @@
   <%= stylesheet_link_tag    "mcore/application", media: "all" %>
 </head>
 <body>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
 <%= yield %>
 
